<resources>
    <string name="app_name">你好理工</string>
    <string name="action_settings">设置</string>
    <string name="cancel">取消</string>
    <string name="str_return">返回</string>
    <string name="str_login">登陆</string>
    <string name="str_logining">登陆中</string>
    <string name="str_cheaking_update">正在检查新版本</string>
    <string name="str_format_has_new_version">你好理工  %1$s 已发布！</string>
    <string name="str_update_detail">更新内容：</string>
    <string name="str_update_time">发布时间：</string>
    <string name="str_format_publish_time">发布时间：%1$s</string>
    <string name="str_update_immediately">立即更新</string>
    <string name="str_update_delay">下次再说</string>
    <string name="str_app_file_name">HelloCDUT%1$s.apk</string>
    <string name="str_on_start_updating">新版更新包已进入后台下载，稍后将自动为您安装！</string>
    <string name="str_format_app_name">你好理工  %1$s</string>
    <string name="str_on_dowanload_addone">正在下载插件： %1$s</string>
    <string name="str_format_version">当前版本  V%1$s</string>
    <string name="str_format_i_am">我是%1$s</string>
    <string name="str_format_week">第%1$s周</string>
    <string name="str_format_author">作者：%1$s</string>
    <string name="str_format_adone_version">当前版本：%1$s</string>
    <string name="str_format_introduction">介绍：%1$s</string>
    <string name="str_format_last_time">%1$s秒后重新发送</string>
    <string name="str_updating_compelet">你好理工 ver:%1$s下载完成！</string>
    <string name="str_current_weak">本\n周</string>
    <string name="str_return_current_week">"返回本周"</string>
    <string name="str_schedule">日程</string>
    <string name="str_query">查询</string>
    <string name="str_more">更多</string>
    <string name="str_add">添加</string>
    <string name="str_invitation_apply">好友申请</string>
    <string name="str_schedule_detail">课程详情</string>
    <string name="str_aao_news">教务资讯</string>
    <string name="str_my_info">我的资料</string>
    <string name="str_user_info">用户资料</string>
    <string name="str_relative_account">关联账号</string>
    <string name="str_collection">收藏</string>
    <string name="str_exam">考试</string>
    <string name="str_setting">设置</string>
    <string name="str_avatar">头像</string>
    <string name="str_account">账号</string>
    <string name="str_nick_name">昵称</string>
    <string name="str_motto">座右铭</string>
    <string name="str_entrance_date">入学年份</string>
    <string name="str_class">班级</string>
    <string name="str_major">专业</string>
    <string name="str_institute">学院</string>
    <string name="str_student_number">学号</string>
    <string name="str_birth_date">生日</string>
    <string name="str_gender">性别</string>
    <string name="str_real_name">认证实名</string>
    <string name="str_sex_orientation">性取向</string>
    <string name="str_love_status">恋爱状态</string>
    <string name="str_query_grade">学校考核成绩查询</string>
    <string name="str_query_national_exam">等级考试查询</string>
    <string name="str_query_classroom_status">教室状态查询</string>
    <string name="str_query_tel_number">移动短号查询</string>
    <string name="str_query_teach_plan">教学计划查询</string>
    <string name="str_read_mode">浏览模式</string>
    <string name="str_share">分享</string>
    <string name="str_explain">说明</string>
    <string name="str_open_with_sytem_browser">使用浏览器阅读</string>
    <string name="str_knowed">知道了</string>
    <string name="str_read_detail">查看详情</string>
    <string name="str_call_log">最近通话</string>
    <string name="str_empty"></string>
    <string name="str_monday">星期一</string>
    <string name="str_tuesday">星期二</string>
    <string name="str_wednesday">星期三</string>
    <string name="str_thursday">星期四</string>
    <string name="str_friday">星期五</string>
    <string name="str_saturday">星期六</string>
    <string name="str_sunday">星期日</string>
    <string name="message_loading">玩命加载中！</string>
    <string name="str_unbinding">正在解除绑定</string>
    <string name="message_weak_internet">连接失败，请检查网络连接！</string>
    <string name="message_aao_detail">鉴于学校数据源页面采用了古老的页面技术,暂时无法做到完美适配移动版。\n1.日常浏览可选择适应屏幕，\n2.查看长表格可选择缩放浏览\n3.下载新闻中文件可选择原网页或使用系统浏览器打开</string>
    <string name="message_no_book_be_found">翻遍了图书馆都没找到这本书……换个关键字吧！</string>
    <string name="message_create_shortcut">创建日程快捷方式成功！</string>
    <string name="message_dont_show_noon_class">太棒了，你在本学期都没有中午进行的病娇课程！是否隐藏中午的日程获得更开阔的视野?(隐藏后可以在右上角日程设置中恢复显示)</string>
    <string name="message_has_noon_class">你在本学期有中午进行的病娇课程，隐藏可能会错过上课，确定隐藏么？</string>
    <string name="message_update_failed">抱歉，由于您的系统缺少android下载服务，请登录www.hellocdut.com下载最新版本！</string>
    <string name="message_wrong_format_captcha">非法验证码：验证码必须由4位数字构成</string>
    <string name="message_wrong_group_length">群名称不能为空：快告诉我你的群叫什么名字吧</string>
    <string name="message_had_clean_cache">清除缓存成功</string>
    <string name="message_wrong_date_pick">查询日期错误：开始日期不能大于结束日期</string>
    <string name="message_aao_list_toast">尚无新的新闻,请稍候再试！</string>
    <string name="message_query_tel_wrong_number_toast">查询号码有误，请查证！</string>
    <string name="message_query_tel_sent_sucess_toast">查询已提交，请留意移动反馈短信！</string>
    <string name="message_regist_success">注册成功！</string>
    <string name="message_wrong_donnot_accpet_agreement">请先仔细阅读并接受用户协议！</string>
    <string name="message_wrong_username_toast">非法用户名：用户名须由6—16位英文字母/数字组成！</string>
    <string name="message_wrong_password_toast">非法密码长度：密码长度须由6—16位字符组成！</string>
    <string name="message_wrong_student_id_toast">非法学号：学号必须由12位或13数字组成！</string>
    <string name="message_wrong_empty_password_toast">非法密码：密码不能为空！</string>
    <string name="message_wrong_input_lengh">非法内容长度：请根据输入提示输入合适内容长度！</string>
    <string name="message_wrong_empty_keyword">不给关键字可怎么找呢？TAT</string>
    <string name="message_wrong_password_confirm_toast">两次输入的密码不同，请查证再试！</string>
    <string-array name="str_array_aao_detail_chose_dialog">
        <item>适应屏幕</item>
        <item>缩放阅览</item>
        <item>网页版</item>
    </string-array>
    <string-array name="str_array_hello_cdut">
        <item>> printf (\"Hello CDUT!\");             </item>
        <item>> System.Console.Write(\"Hello CDUT!\");</item>
        <item>> print \"Hello CDUT!\"                 </item>
        <item>> System.out.print(\"Hello CDUT\");     </item>
        <item>> puts \"Hello CDUT!\"                  </item>
        <item>> document.write (\"Hello CDUT!\");     </item>
        <item>> console.log(\"Hello CDUT\")           </item>
        <item>> System.out.print(\"Hello CDUT!\");    </item>
        <item>> DISPLAY \"Hello CDUT!\".              </item>
        <item>> echo \"Hello CDUT!\"                  </item>
        <item>> writeln(\'Hello CDUT!\');             </item>
        <item>> NSLog(@\"Hello CDUT!\");              </item>
    </string-array>
    <string-array name="str_array_main_function_name">
        <item>日程</item>
        <item>查询</item>
        <item>图书馆</item>
        <item>校园卡</item>
        <item>更多</item>
    </string-array>
    <string-array name="str_array_gender">
        <item>女</item>
        <item>男</item>
    </string-array>
    <string-array name="str_array_love_status">
        <item>保密</item>
        <item>求交往</item>
        <item>热恋</item>
    </string-array>
    <string-array name="str_array_sex_orientation">
        <item>异性</item>
        <item>同性</item>
        <item>独终身</item>
        <item>双性</item>
    </string-array>
    <string-array name="str_array_view_permission">
        <item>所有人</item>
        <item>仅好友</item>
        <item>仅自己</item>
    </string-array>
    <string-array name="str_array_upload_avatar_method">
        <item>拍照</item>
        <item>相册</item>
        <item>教务头像</item>
    </string-array>
    <string name="hint_query_grade">期末成绩、考核成绩，还要打开浏览器登录教务处？你OUT了！</string>
    <string name="hint_query_national_exam">国家考试查询网站地址难记又难找？点我即可知道！</string>
    <string name="hint_query_class_room">去哪上自习？一教到九教，教室状态全知晓！</string>
    <string name="hint_query_tel">未接短号？是那个TA还是推销？轻松识身份！</string>
    <string name="hint_query_teach_plan">我的专业要学什么？TA的有没有和我修一样的课程呢？点我即可知晓！</string>
    <string name="str_unknown_number">陌生号码</string>
    <string name="str_miss_call">未接！</string>
    <string name="str_register_new_user">新用户注册</string>
    <string name="str_retrieve">账号服务中心</string>
    <string name="str_cannot_login">无法登陆？</string>
    <string name="str_password">密码</string>
    <string name="hint_account_mail">账号</string>
    <string name="str_reg">注册</string>
    <string name="str_regging">正在注册</string>
    <string name="str_load_schedule">正在获取您的课程表</string>
    <string name="hint_comfirm_password">确认密码</string>
    <string name="str_hellocdut_user_agreement">《HelloCDUT用户使用协议》</string>
    <string name="str_agree">同意</string>
    <string name="search_header">S</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_picture">图片</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="str_isread">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="resend">重发</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="prompt">提示</string>
    <string name="ok">确定</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="delete">删除</string>
    <string name="forward">转发</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="voice">[语音]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="str_format_user_name">账号:%1$s</string>
    <string name="str_search">搜索</string>
    <string name="str_bind">绑定</string>
    <string name="str_chat">聊天</string>
    <string name="str_info_permission">设置资料\"%1$s\"的可见范围</string>
    <string name="str_hint_modify_nickname">昵称</string>
    <string name="str_hint_modify_motto">座右铭</string>
    <string name="str_hint_verify_contact">填写验证消息，让TA可以认出你</string>
    <string name="str_verify_contact">验证申请</string>
    <string name="str_secret">保密</string>
    <string name="str_single">求交往</string>
    <string name="str_in_love">热恋中</string>
    <string name="str_oppositie_sex">异性</string>
    <string name="str_same_sex">同性</string>
    <string name="str_keep_alone">独终身</string>
    <string name="str_double_sex">双性</string>
    <string name="message_clean_cache">清除缓存将清除所有的缓存数据，使用某些特定功能需要重新加载数据，在正常使用的情况通常不建议这么做！</string>
    <string name="str_comfirm_clean">确定清除</string>
    <string name="hint_dangerous_operatation">请务必慎重操作</string>
    <string name="message_unbind_aao">解除教务绑定后你将无法使用查看日程、成绩等功能。同时，由于实名资料重置，你将失去你的专业人脉！</string>
    <string name="message_unbind_lib">解除图书馆绑定后你将无法使用查阅图书、续借等功能！</string>
    <string name="message_unbind_campus">解除一卡通绑定后你将无法使用查询一卡通消费记录等功能！</string>
    <string name="str_known_unbind_aftermath">我已清楚解除绑定带来的影响</string>
    <string name="str_str_loading_search">查找中</string>
    <string name="str_str_loading_binding">绑定进行中</string>
    <string name="message_wrong_donnot_accpet_checkbox">请仔细阅读提示内容并勾选复选框确认后执行操作！</string>
    <string name="str_quit_app">退出你好理工</string>
    <string name="hint_quit_message">退出后将无法收到新消息！</string>
    <string name="str_quit_current_account">退出登录</string>
    <string name="hint_quit_current_account">注销当前登陆的账号</string>
    <string name="str_group_id">群号</string>
    <string name="str_account_mail_stu_id">帐号/学号/邮箱</string>
</resources>