<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_quit_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_white_btn_dress_with_layout"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_medium_margin"
            android:text="@string/str_quit_app"
            android:textSize="@dimen/font_medium_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_medium_margin"
            android:layout_marginRight="@dimen/layout_large_margin"
            android:text="@string/hint_quit_message"
            android:textColor="@color/color_ep_font_gray" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@color/color_ep_gray" />

    <LinearLayout
        android:id="@+id/layout_quit_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_white_btn_dress_with_layout"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_medium_margin"
            android:text="@string/str_quit_current_account"
            android:textSize="@dimen/font_medium_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_medium_margin"
            android:layout_marginRight="@dimen/layout_large_margin"
            android:text="@string/hint_quit_current_account"
            android:textColor="@color/color_ep_font_gray" />
    </LinearLayout>

</LinearLayout>