<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroup_love_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_medium_margin"
        android:layout_marginTop="@dimen/layout_medium_margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_self"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/str_secret" />

        <RadioButton
            android:id="@+id/radio_single"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_single" />

        <RadioButton
            android:id="@+id/radio_in_love"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_in_love" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_medium_margin"
        android:text="可见范围："
        android:textSize="@dimen/font_medium_size" />

    <RadioGroup
        android:id="@+id/radioGroup_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_medium_margin"
        android:layout_marginLeft="@dimen/layout_medium_margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="所有人" />

        <RadioButton
            android:id="@+id/radio_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="仅好友" />

        <RadioButton
            android:id="@+id/radio_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="仅自己" />
    </RadioGroup>

</LinearLayout>