<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ep_white"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_medium_margin"
                android:layout_marginRight="@dimen/layout_medium_margin">

                <ImageView
                    android:layout_width="@dimen/icon_small_size"
                    android:layout_height="@dimen/icon_small_size"
                    android:contentDescription="@string/app_name"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_user" />

                <com.emptypointer.hellocdut.widget.ClearableEditText
                    android:id="@+id/editText_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_medium_margin"
                    android:layout_marginRight="@dimen/layout_small_margin"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/str_account_mail_stu_id"
                    android:singleLine="true"
                    android:textSize="@dimen/font_medium_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/layout_medium_margin"
                android:layout_marginRight="@dimen/layout_medium_margin"
                android:layout_marginTop="@dimen/layout_small_margin"
                android:background="@color/color_ep_deep_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_medium_margin"
                android:layout_marginRight="@dimen/layout_medium_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:layout_width="@dimen/icon_small_size"
                    android:layout_height="@dimen/icon_small_size"
                    android:contentDescription="@string/app_name"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_password" />

                <com.emptypointer.hellocdut.widget.ClearableEditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_medium_margin"
                    android:layout_marginRight="@dimen/layout_small_margin"
                    android:background="@null"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:hint="@string/str_password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/font_medium_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/layout_medium_margin"
                android:layout_marginRight="@dimen/layout_medium_margin"
                android:layout_marginTop="@dimen/layout_small_margin"
                android:background="@color/color_ep_deep_gray" />

            <Button
                android:id="@+id/button_login"
                style="@style/ep_blue_button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_medium_margin"
                android:layout_marginRight="@dimen/layout_medium_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/str_login" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_medium_margin"
                android:layout_marginRight="@dimen/layout_medium_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/textView_retrieve_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/layout_small_margin"
                    android:clickable="true"
                    android:text="@string/str_cannot_login"
                    android:textColor="@color/selector_color_blue_change"
                    android:textSize="@dimen/font_medium_size" />

                <TextView
                    android:id="@+id/textView_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="@dimen/layout_small_margin"
                    android:clickable="true"
                    android:text="@string/str_register_new_user"
                    android:textColor="@color/selector_color_blue_change"
                    android:textSize="@dimen/font_medium_size" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>